bleed fix

--- a/src/components/home/_DiscoverDesignBuildLaunchEnjoy.scss
+++ b/src/components/home/_DiscoverDesignBuildLaunchEnjoy.scss
@@ -2,7 +2,6 @@
   @include flex(column, center, center);
   @include body-2();
   margin: auto;
-  padding: 1.6rem;
   width: 280px;
 
   &__heading {
