--- a/src/components/home/_Hero.scss
+++ b/src/components/home/_Hero.scss
@@ -7,7 +7,7 @@
   background-position: right center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
+  // width: 100vw;
 
   &__card {
     @include margin-y(2.4rem);
